--- a/servera.yaml
+++ b/servera.yaml
@@ -1,6 +1,6 @@
 ---
 # Requires "ansible-galaxy collection install community.general" to be ran on control node
-- name: building environment for rhcsa Server A
+- name: Building environment for rhcsa Server A
   hosts: servera
   become: yes
   vars_files: vars/servera
@@ -9,35 +9,35 @@
       yum:
         name: git
         state: present
-    - name: get register to check if tails_servera.sh already exists in case you have to run this again
+    - name: Get register to check if tails_servera.sh already exists in case you have to run this again
       stat:
         path: /home/student/tails_servera.sh
       register: istails
-    - name: git clone for tails_servera.sh
+    - name: Git clone for tails_servera.sh
       block:
-      - name: gitclone for tails_servera.sh
+      - name: Gitclone for tails_servera.sh
         git:
           repo: https://github.com/OpenCloudJedi/PeteTong.git
           dest: /home/student/Project
-      - name: move tails_servera.sh to /root/
+      - name: Move tails_servera.sh to /root/
         command: mv /home/student/Project/tails_servera.sh /home/student/
-      - name: add executable permissions to the tails file    
+      - name: Add executable permissions to the tails file    
         command: chmod +x /home/student/tails_servera.sh
-      - name: remove git clone folder
+      - name: Remove git clone folder
         file:
           path: /home/student/Project
           state: absent
         # Used git to make this more elegant than just command: wget. That is probably much more elegant than this spaghetti
       when: istails.stat.exists == False
-    - name: make folder "{{ docroot }}"
+    - name: Make folder "{{ docroot }}"
       file:
         path: "{{ docroot }}"
         state: directory
-    - name: create an index.html file
+    - name: Create an index.html file
       template:
         src: index.j2
         dest: "{{ docroot }}/index.html"
-    - name: install apache
+    - name: Install apache
       yum:
         name: httpd
         state: present
@@ -54,23 +54,23 @@
       template:
         src: exports.j2
         dest: /etc/exports
-    - name: install a repo
+    - name: Install a repo
       yum_repository: 
         baseurl: https://dl.fedoraproject.org/pub/epel/8/Everything/x86_64/
         gpgcheck: 0
         enabled: yes
         name: extra_repo.repo
         description: epel
-    - name: install nfs
+    - name: Install nfs
       yum:
         name: nfs-utils
         state: installed
-    - name: enable nfs-server
+    - name: Enable nfs-server
       service:
         name: nfs-server
         state: started
         enabled: yes
-    - name: exportfs
+    - name: Exportfs
       command: exportfs
     - name: configure firewalld for nfs CHANGE TO JUST FIREWALLD INSTEAD OF ansible.posix.firewalld IF CENTOS/RHEL CONTROL NODE
       ansible.posix.firewalld:
@@ -78,17 +78,17 @@
         permanent: yes
         state: enabled
         immediate: yes
-    - name: remove cockpit same all caps WARNING about firewalld as above name
+    - name: Remove cockpit same all caps WARNING about firewalld as above name
       ansible.posix.firewalld:
         service: cockpit
         zone: public
         permanent: yes
         immediate: yes
         state: disabled
-    - name: add user "{{ user }}"
+    - name: Add user "{{ user }}"
       user:
         name: "{{ user }}"
-        comment: "soooo spooky"
+        comment: "{{ userdesc }}"
     - name: Add a ton of files
       file:
         owner: "{{ user }}"
@@ -96,26 +96,26 @@
         state: touch
         path: "{{ item }}"
       loop:
-        - /tmp/pun
-        - /var/log/twisted
-        - /etc/sadistic
-        - /home/invasion
-    - name: run setsebool the "wrong" way
+        - {{ file1 }}
+        - {{ file2 }}
+        - {{ file3 }}
+        - {{ file4 }}
+    - name: Run setsebool the "wrong" way
       command: setsebool -P use_nfs_home_dirs 1
-    - name: find all repos and put them in a register
+    - name: Find all repos and put them in a register
       find:
         paths: /etc/yum.repos.d
         patterns: "*.repo"
       register: therepos
-    - name: remove the repo files
+    - name: Remove the repo files
       loop: "{{ therepos.files }}"
       file:
         path: "{{ item.path }}"
         state: absent
-    - name: bork connection for intravm connection
-      community.general.nmcli:
-        conn_name: "Wired Connection 1"
-        state: present
-        ip4: 0.0.0.0
-        autoconnect: no
-        type: ethernet
+    - name: Bork connection for intravm connection
+      template:
+        src: conn.j2
+        dest: /etc/sysconfig/network-scripts/ifcfg-Wired_connection_1
+    - name: reload
+      command: nmcli connection reload
+    - meta: end_play
