--- a/playbooks/servera.yaml
+++ b/playbooks/servera.yaml
@@ -8,20 +8,22 @@
       yum:
         name: git
         state: present
-    - name: Get register to check if tails_servera.sh already exists in case you have to run this again
+    - name: Get register to check if {{ gradescript }} already exists in case you have to run this again
       stat:
-        path: /home/student/tails_servera.sh
+        path: /home/student/{{ gradescript }}
       register: istails
-    - name: Git clone for tails_servera.sh
+    - name: Git clone for {{ gradescript }}
       block:
-      - name: Gitclone for tails_servera.sh
+      - name: Gitclone for {{ gradescript }}
         git:
           repo: https://github.com/OpenCloudJedi/PeteTong.git
           dest: /home/student/Project
-      - name: Move tails_servera.sh to /root/
-        command: mv /home/student/Project/tails_servera.sh /home/student/
+      - name: Move {{ gradescript }} to /root/
+        command: mv /home/student/Project/{{ gradescript }} /home/student/
       - name: Add executable permissions to the tails file    
-        command: chmod +x /home/student/tails_servera.sh
+        file: 
+          path: /home/student/{{ gradescript }}
+          mode: +x
       - name: Remove git clone folder
         file:
           path: /home/student/Project
@@ -34,14 +36,16 @@
           line: 140.82.113.4    github.com
           path: /etc/hosts
           state: present
-      - name: Gitclone for tails_servera.sh
+      - name: Gitclone for {{ gradescript }}
         git:
           repo: https://github.com/OpenCloudJedi/PeteTong.git
           dest: /home/student/Project
-      - name: Move tails_servera.sh to /root/
-        command: mv /home/student/Project/tails_servera.sh /home/student/
+      - name: Move {{ gradescript }} to /root/
+        command: mv /home/student/Project/{{ gradescript }} /home/student/
       - name: Add executable permissions to the tails file    
-        command: chmod +x /home/student/tails_servera.sh
+        file:
+          path: /home/student/{{ gradescript }}
+          mode: +x
       - name: Remove git clone folder
         file:
           path: /home/student/Project
@@ -147,4 +151,3 @@
       async: 4
       poll: 1
       ignore_errors: yes
-
