--- a/playbooks/servera.yaml
+++ b/playbooks/servera.yaml
@@ -100,7 +100,7 @@
         permanent: yes
         state: enabled
         immediate: yes
-    - name: Remove cockpit same all caps 
+    - name: Remove cockpit
       firewalld:
         service: cockpit
         zone: public
